--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,5 +22,9 @@ jobs:
           dest: 3d_monolayer_tutorial_files.zip
       - uses: actions/upload-artifact@v1
         with:
-          name: my-artifact
+          name: 3d_monolayer_tutorial_files
           path: ${{ github.workspace }}/3d_monolayer_tutorial_files.zip
+      - uses: actions/upload-artifact@v3
+        with:
+          name: 3d_monolayer_tutorial_files
+          path: ${{ github.workspace }}
