--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,4 @@
 theme: jekyll-theme-minimal
+title: CellProfiler Tutorials
+logo: /assets/img/logo.png
+description: A collection of tutorials for CellProfiler
